--- a/src/app/modules/main/components/search/search.component.html
+++ b/src/app/modules/main/components/search/search.component.html
@@ -67,7 +67,7 @@
                             <mat-cell *matCellDef="let element"
                                       [matTooltip]="element.html_url"
                                       matTooltipPosition="above">
-                                <a [href]="element.html_url">
+                                <a [href]="element.html_url" target="_blank">
                                     <mat-icon>arrow_forward</mat-icon>
                                 </a>
                             </mat-cell>
